<!-- res/layout/activity_main.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:layout_below="@id/textViewName"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:id="@+id/layoutPower"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/editTextName"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/textViewStrength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/power"
            android:textSize="18sp"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/textViewStrengthValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/zero"/>
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBarStrength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutPower"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/textViewGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="18sp"
        android:layout_below="@id/seekBarStrength"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewGender"
        android:layout_marginBottom="16dp">

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/man" />

        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/woman" />

    </RadioGroup>

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:textSize="18sp"
        android:layout_below="@id/radioGroupGender"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textViewGender"
        android:layout_alignEnd="@+id/radioGroupGender"
        android:layout_centerInParent="true"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="-50dp" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_desc"
        android:layout_below="@id/textViewDescription"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_below="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/delete_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:layout_margin="10dp"/>
    </LinearLayout>




</RelativeLayout>
