<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.skow.lab5.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.skow.lab5.ui.settings.SwipeViewFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_swipe_view" />

    <fragment
        android:id="@+id/nav_items_list"
        android:name="com.skow.lab5.ui.items_list.ItemFragment"
        android:label="@string/menu_dates"
        tools:layout="@layout/fragment_item_list" />
</navigation>